[package]
edition = "2021"
name = "serde-serialize-seed"
version = "0.0.6"
rust-version = "1.59"
authors = ["warlock <internalmike@gmail.com>"]
description = "The `SerializeSeed` trait for convinience."
readme = "README.md"
documentation = "https://docs.rs/serde-serialize-seed/"
keywords = ["serde", "serialize", "seed", "serializeseed"]
categories = ["encoding", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/serde-serialize-seed"

[features]
default = ["alloc"]
alloc = []

[dependencies]
phantom-type = { version = "0.4.2", default-features = false }
serde = { version = "1.0.151", default-features = false }

[dev-dependencies]
serde_json = "1.0.91"

[badges]
maintenance = { status = "actively-developed" }
