[package]
edition = "2021"
name = "ensure_no_std"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
serde = { version = "1.0.151", default-features = false }
serde-serialize-seed = { path = "..", default-features = false }
exit-no-std = "0.1.0"
